# advent-of-code

./: .docstr.yaml  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-documentation-github-pages.yml
advent_of_code/: __init__.py  common.py  common_img.py  constants.py  graph_visualization.py  protocols.py  sort_whatsapp_pictures.py  sort_your_moms_picture.py
advent_of_code/common/: __init__.py  common.py  common_img.py  graph_visualization.py  job_utilities.py  protocols.py  store.py
advent_of_code/jobs/: __init__.py  code_generation.py  coverage_badge.py  download_aoc_data.py  download_expected_answers.py  download_input.py  download_score.py  scrap_halle_grains.ipynb  shorten_file_names.py  sort_whatsapp_pictures.py
advent_of_code/visualization/: __init__.py  notebooks.py  observable_plot.py  plotly.py  plotly_tools.py  protocols.py  pygame_dynamic_array_viewer_202314.py  pygame_dynamic_array_viewer_202316.py  pygame_dynamic_array_viewer_example.py
advent_of_code/y_2016/: __init__.py  problem_201601.py  problem_201602.py  problem_201603.py  problem_201604.py  problem_201605.py  problem_201606.py  problem_201607.py  problem_201608.py  problem_201609.py  problem_201610.py  problem_201612.py  problem_201625.py
advent_of_code/y_2019/: problem_201901.py  problem_201902.py  problem_201903.py  problem_201904.py  problem_201905.py  problem_201906.py  problem_201907.py  problem_201908.py  problem_201909.py  problem_201916.py
advent_of_code/y_2022/: __init__.py  problem_202201.py  problem_202202.py  problem_202204.py  problem_202224.py  problem_202225.py
advent_of_code/y_2023/: __init__.py  problem_202304.py  problem_202305.py  problem_202308.py  problem_202310.py  problem_202311.py  problem_202314.py  problem_202316.py  problem_202317.py  problem_202318.py  problem_202319.py  problem_202320.py  problem_202321.py  problem_202324.py  problem_202325.py
advent_of_code/y_2024/: problem_202401.ipynb
advent_of_code/year_2022/: problem_202203.py  problem_202205.py  year_2022_day_01.py  year_2022_day_02.py  year_2022_day_03.py  year_2022_day_04.py  year_2022_day_05.py  year_2022_day_24.py  year_2022_day_25.py
advent_of_code/year_2023/: problem_202306.py  problem_202307.py  problem_202311.py  problem_202312.py  problem_202315.py  year_2023_day_00_template.py  year_2023_day_01.py  year_2023_day_02.py  year_2023_day_03.py  year_2023_day_04.py  year_2023_day_05.py  year_2023_day_06.py  year_2023_day_07.py  year_2023_day_08.py  year_2023_day_09.py  year_2023_day_1.py  year_2023_day_10.py  year_2023_day_11.py  (+16 more)
docs/: .buildinfo  README.html  api.html  genindex.html  index.html  index__.html  objects.inv  py-modindex.html  readme.html  readme_link.html  search.html  searchindex.js
notebooks/: notes_ratios.ipynb  year_2023_day_20.ipynb  year_2023_day_21.ipynb  year_2023_day_22.ipynb  year_2023_day_23.ipynb  year_2023_day_25.ipynb
scripts/: bunch_of_png_to_video.sh  docs_pyproject_to_requirements_txt.py  generate_notebooks_documentation_2023.sh  shorten_file_names.py
tests/: conftest.py
(+621 files in other folders)
