[tool.poetry]
authors = ["eschalk <etienne.schalk@gmail.com>"]
description = ""
name = "advent-of-code"
packages = [{include = "advent_of_code"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2023.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
